--- a/server/package.json
+++ b/server/package.json
@@ -31,8 +31,10 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "mongoose": "^8.0.3",
+    "nanoid": "^5.0.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
