--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loading-components": "^1.1.12",
+    "react-redux": "^9.0.3",
+    "react-router-dom": "^6.20.1",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
